# ctci

./: CMakeLists.txt  CMakeSettings.json  CppProperties.json  LICENSE  README.md  VisualStudio_Boost_Integration.md
01_arrays_and_strings/: 01_01_is_unique  01_05_one_away  01_07_rotate_matrix  01_07_rotate_matrix.cpp  01_09_string_rotation.cpp
02_linked_lists/: 02_01_remove_dups.cpp  02_02_kth_to_the_last.cpp  02_04_partition  02_05_sum_digit_lists.cpp  02_07_intersection.cpp
03_stacks_and_queues/: 03_05_sort_stack.cpp
16_moderate/: 16_26_calculator.cpp
99_my_riddles/: 99_01_water_divide.cpp  99_02_string_list_dist_1.cpp
src/01_arrays_and_strings/: 01_01_is_unique.cpp  01_05_one_away.cpp  01_08_zero_matrix.cpp  CMakeLists.txt
src/02_linked_lists/: 02_04_partition.cpp  02_05_sum_digit_lists  02_08_loop_detection  02_08_loop_detection.cpp
src/03_stacks_and_queues/: 03_01_three_in_one.cpp  03_02_stack_with_min.cpp  03_03_stack_of_plates.cpp  03_05_sort_stack.cpp  03_06_animal_shelter.cpp
src/99_my_riddles/: 99_01_water_divide.cpp  99_02_string_list_dist_1.cpp  99_03_rumor_spreading.cpp  99_04_00_main.cpp  99_04_01_in_memory_social_network.cpp  99_04_01_in_memory_social_network.h  99_04_02_boost_http_server.cpp  99_04_02_boost_http_server.h  99_04_in_memory_social_network.cpp  99_05_operator_maximizer.cpp  99_06_boost_asio_playground.cpp  99_06_boost_http_client.cpp  99_07_in_place_reverse_linked_list.c  CMakeLists.txt  fields_alloc.h  p99_07_gnuplot_performance.gp  p99_07_gnuplot_performance_tlr.gp  p99_07_readme.md  p99_07_run_measurement.sh  time_99_07.csv  time_99_07_mac.csv  time_99_07_mac1.csv  time_99_07_mac_o2.csv  time_99_07_mac_o2_1.csv  time_99_07_o2.csv  time_99_07_o2_blocked_nice_-20.csv  time_99_07_o2_nice_-20.csv
src/A0_design_riddles/: a0_01_chat_server.cpp
